--- a/Tengnix.yml
+++ b/Tengnix.yml
@@ -70,4 +70,13 @@
     - name: restart nginx
       service:
         name: nginx
-        state: restarted 
+        state: restarted
+
+
+    - name: installation tools
+      yum: name={{ item }} update_cache=yes state=latest
+      with_items:
+         - htop
+         - git
+         - zsh
+         - sudo 
